Update opportunity program details

--- a/layouts/tickets/single.html
+++ b/layouts/tickets/single.html
@@ -19,9 +19,8 @@
           <div class="inner">
             <div class="next-event">
               <h3><span>Opportunity Program</span></h3>
-              <P>We’re dedicated to diversity, inclusion and even more so—equal opportunity. We realize that buying a ticket to a conference for many isn’t a trivial expense, but it can be a turning point in someone’s career.</P>
-              <P>We’re committed to bringing in as many individuals who couldn’t attend otherwise as possible.</P>
-              <a class="btn agenda" href="./opportunity-program">Find out more</a>
+              <span>We’re committed to bringing in as many individuals who couldn’t attend otherwise as possible.</span><br /><br />
+              <a class="btn agenda" href="/opportunity-program">Find out more</a>
             </div>
           </div>
         </div>
