Update Readify logo

--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -355,6 +355,7 @@ footer {
   img {
     max-width: 120px !important;
     margin: 10px 15px 10px 15px;
+    max-height: 70px !important;
   }
 
   small {
