--- a/layouts/tickets/single.html
+++ b/layouts/tickets/single.html
@@ -9,9 +9,8 @@
         <div class="col-xs-12 col-sm-5 col-md-5 col-lg-4 right-col">
           <div class="inner">
             <div class="next-event">
-              <h3><span>Wave 2 Countdown</span></h3>
-              <span id="ticketClock"></span>
-              <a class="btn book" href="https://ti.to/ddd-melbourne/ddd-2018">Buy Tickets Here</a>
+              <h3><span>Wave 2</span></h3>
+              <a class="btn book" href="https://ti.to/ddd-melbourne/ddd-2018">Join the Waiting List</a>
             </div>
           </div>
         </div>
