--- a/layouts/session-submission/single.html
+++ b/layouts/session-submission/single.html
@@ -96,7 +96,7 @@
               </fieldset>
             </form>
           {{ else }}
-            <p>The Open Voting is now closed, so please submit to the in-house process using the form above.</p>
+            <p>Submissions for the Open Voting Channel has now closed, so please submit to either the in-house or Junior Dev process using the forms above.</p>
           {{ end }}
         </div>
         <div class="col-xs-12 col-sm-5 col-md-5 col-lg-4 right-col">
