--- a/src/less/colours-and-fonts.less
+++ b/src/less/colours-and-fonts.less
@@ -18,7 +18,7 @@
 @aqua-room: #01b6ad;
 @blue-room: #54a6d6;
 @green-room: #66ad4a;
-@orange-room: #cd9152;
+@orange-room: #ca7b29;
 @purple-room: #9e55c0;
 @red-room: #ad4a54;
 @foyer-room: #dd4876;
