--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -540,11 +540,11 @@ ul.accordion {
 .col.aqua-room {border-color: @aqua-room}
 a.col.aqua-room:hover {background: @aqua-room}
 
-.blue-room {background: @blue-room}
-a.blue-room:hover {background: @blue-room}
+strong.blue-room {background: @blue-room}
+a.blue-room:hover {color: @blue-room}
 
-.green-room {background: @green-room}
-a.col.green-room:hover {background: @green-room}
+strong.green-room {background: @green-room}
+a.green-room:hover {color: @green-room}
 
 strong.orange-room {background: @orange-room}
 a.orange-room:hover {color: @orange-room}
@@ -552,8 +552,8 @@ a.orange-room:hover {color: @orange-room}
 .col.purple-room {border-color: @purple-room}
 a.col.purple-room:hover {background: @purple-room}
 
-.red-room {background: @red-room}
-a.red-room:hover {background: @red-room}
+strong.red-room {background: @red-room}
+a.red-room:hover {color: @red-room}
 
 .col.foyer-room {border-color: @foyer-room}
 a.col.foyer-room:hover {background: @foyer-room}
