--- a/layouts/partials/important-dates.html
+++ b/layouts/partials/important-dates.html
@@ -10,12 +10,20 @@
 
     <div class="what-now">
    
-      <h2>What now?</h2>
-      <a href="/submit-a-session/" class="btn submit">Submit a Session</a>
-      <!--
+      <h2>What now</h2>
       <a href="/agenda/" class="btn agenda">View Agenda</a>
+      <!--
+      <a href="/submit-a-session/" class="btn submit">Submit a Session</a>
       <a href="/tickets/" class="btn book">Purchase a Ticket</a>
       -->
     </div>
   </div>
 </section>
+
+<section class="grey"><div class="container"><h2>Keynote Speaker</h2><article id="Keynote" class="keynote"><h3>A day in the life of a CIO.</h3><img src="./images/daylestevens2018.jpg" alt="Dayle Stevens"><h4>Dayle Stevens<br><small>Divisional CIO, AGL</small><small><br>(<a href="https://twitter.com/Dayle_Stevens" target="_blank">@Dayle_Stevens</a> | <a href="https://daylestevens.com/" target="_blank">https://daylestevens.com/</a>)</small></h4>
+  <p class="preserve-whitespace" style="margin-bottom:10px">In this keynote Dayle will share her insights into a day in the life of a CIO, what she does each day, & what she needs & looks for in her teams & those around her.  You will learn about the mindset of a CIO, what engages them & what distracts them, and how to approach them & grab their attention on the things that you care most about.</p>
+  <p class="preserve-whitespace"><em>Dayle Stevens is an award winning technology executive, being named in the CIO50 list as one of Australia’s top CIOs, twice winning the Australian Computer Society Digital Disruptor Award, twice a finalist in Australia’s premiere business women’s awards, and winning a #TechDiversity Award.
+
+Dayle joined AGL in Februrary 2018 as a Divisional CIO, leading the transformation of the Corporate & Operations technology services and part of the larger transformation taking place at AGL. Previously Dayle was at NAB, where she was a Divisional CIO providing the technology services for NAB’s Corporate Operations divisions.  
+
+Outside of work Dayle is a Non-Executive Director at Robogals Global, an international not-for-profit volunteer organisation aiming to engage young women in engineering and technical education and careers.  Dayle is also an Ambassador at Girl Geek Academy, a global movement encouraging women to learn technology, create startups and build more of the internet.  Dayle has been a personal mentor in the Queen’s Young Leaders Programme since 2016, and in 2018 is a tutor for the Programme based at Cambridge University in the UK. </div></section>
