--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -1649,3 +1649,27 @@ a.col.afterparty-room:hover {background: @afterparty-room}
 sup {
   top: 0!important;
 }
+
+.keynote img {
+  margin-right: 20px;
+  float: left;
+  width: 250px;
+}
+
+.keynote {
+  text-align: left;
+  padding: 20px;
+}
+
+.preserve-whitespace {
+  white-space: pre-wrap;
+}
+
+article h4 {
+  margin-top: 0;
+}
+
+.keynote h3 {
+  margin: 0 0 20px;
+  border-bottom: 1px solid #333;
+}
